defined variables that were used before are not passed twice to output anymore